# music-caster

./: .dockerignore  .gitignore  CHANGELOG  CHANGELOG.txt  Dockerfile  Installer Script NEW.iss  Installer Script.iss  LICENCE  MCU_version_info.txt  MC_version_info.txt  README.md  Setup Script.iss  after_build.py  audio_player.py  b64_images.py  build.bat  build.cmd  build.py  conftest.py  file_version_info.txt  find_devices.py  helpers.py  layout_creator.py  linux_install.py  linux_install.sh  mc_onedir.spec  mc_portable.spec  mc_version_info.txt  mcu_version_info.txt  music_caster.desktop  music_caster.py  music_caster.spec  music_caster_onedir.spec  music_caster_portable.spec  onedir.spec  onedir.spec.spec  portable.spec  portable.spec.spec  pyproject.toml  requirements-dev.txt  (+10 more)
Music Caster Updater/: Music Caster Updater.csproj  Music Caster Updater.sln  Program.cs  music_caster_updater.pfx
app/: SAMPLE_README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
archive/: Installer Script OLD.iss  find_devices.py  find_mc_servers.py
bootstrapper/: Cargo.toml  README.md  build.rs
bootstrapper/.cargo/: config.toml
bootstrapper/src/: main.rs  migrate.rs
build_files/: CHANGELOG.txt  PyAudio-0.2.11-cp38-cp38-win32.whl  PyAudio-0.2.14-cp312-cp312-win_amd64.whl  daemon.spec  flatpak-pip-generator.py  mc_onedir.spec  mc_portable.spec  mc_version_info.txt  mcu_version_info.txt  onedir.spec  portable.spec  pyaudio-0.2.14-cp314-cp314-win_amd64.whl  pyinstaller-4.0+19fb799a11-py3-none-any.whl  pyinstaller-6.16.0-py3-none-any.whl  pyinstaller-6.8.0-py3-none-any.whl  setup_script.iss  updater.spec  yt_dlp_commit.txt
languages/: en.txt  es.txt  it.txt
migration-bootstrapper/: Cargo.toml  README.md  rust-toolchain.toml
migration-bootstrapper/src/: main.rs  migrate.rs
old/: Installer Script OLD.iss  updater.py
resources/: Live Audio Art.psd  Music Caster Icon.psd  Music Controls.psd  assets.psd  new music caster icon.psd
scripts/: arch-install.sh  debian-install.sh  fedora-install.sh  pre-req.sh  suse-install.sh
src/: audio_player.py  b64_images.py  build.cmd  build.py  ca.elijahlopez.MusicCaster.yml  experiments.py  generate_locales.py  go.mod  go.sum  helpers.py  knownpaths.py  meta.py  music_caster.bat  music_caster.py  pyoxidizer.bzl  requirements-dev.txt  requirements.txt  resolution_switcher.py  shared.py  sys_tray.py  test_harness.py  updater.go  utils.py  webview_demo.py
src-frontend/: package.json
static/: style.css
templates/: files.html  home.html  index.html
(+120 files in other folders)
