[package]
name = "bootstrapper"
version = "0.1.0"
description = "Standalone failsafe that migrates an existing Music Caster install to the Tauri (v6+) MSI build"
authors = ["Elijah Lopez"]
license = ""
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "MusicCasterBootstrapper"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"
ico = "0.4"
static_vcruntime = "3.0"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["tiny-skia"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Registry fallback for locating the uninstaller when it is not found in the CWD.
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
